<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Coordinate Conversor</string>
    <string name="converter_coord">Converter Coordenadas</string>
    <string name="marcar_ponto">Marcar Ponto</string>
    <string name="ver_pontos">Pontos Marcados</string>
    <string name="pontos_marcados">Pontos Marcados</string>
    <string name="conversor_coordenadas">Conversor de Coordenadas</string>
    <string name="coordenadas">Coordenadas Atual:</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="action_settings">Settings</string>
    <string name="registro">Nome do Registro</string>
    <string name="utmLongitude">UTM -> Lat/Lon</string>
    <string name="leste">Leste:</string>
    <string name="longitudeUtm">Lat/Lon -> UTM</string>
    <string name="quadrante">Quadrante</string>
    <string name="salvar_ponto">Salvar Ponto</string>
    <string name="norte">Norte</string>
    <string name="precisao">Precisão</string>
    <string name="altitude">Altitude</string>
    <string name="title_activity_kml">kmlActivity</string>
    <string name="descricao">Descrição</string>
    <string name="sem_valor">Sem Valor</string>

</resources>
