<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout_registro"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:id="@+id/ib_anterior"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/margem_grande"
            />

        <TextView
            android:id="@+id/tv_registros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margem_grande"
            />

        <ImageButton
            android:id="@+id/ib_proximo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/margem_grande"
            />

        </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        />

    <EditText
        android:id="@+id/etlatitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        />

    <EditText
        android:id="@+id/etlongitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:id="@+id/tvAltitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitude"
            />

        <EditText
            android:id="@+id/etAltitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tvAltitude"
            android:hint="@string/altitude"
            />

        <TextView
            android:id="@+id/tvPrecisao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/etPrecisao"
            android:text="@string/precisao"
            />

        <EditText
            android:id="@+id/etPrecisao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/precisao"
            android:layout_alignParentRight="true"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro"/>

        <EditText
            android:id="@+id/etregistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/registro"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descricao"
            />

        <EditText
            android:id="@+id/etdescricao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descricao"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora"
                />

            <EditText
                android:id="@+id/etHora"
                android:layout_toRightOf="@+id/tvHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hora"
                />

            <TextView
                android:id="@+id/tvData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:layout_toLeftOf="@+id/etData"
                />

            <EditText
                android:id="@+id/etData"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/data"
                />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/norte"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/norte"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tvSetor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quadrante"
            />

        <EditText
            android:id="@+id/etSetor"
            android:layout_toRightOf="@+id/tvSetor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/quadrante"
            />

        <TextView
            android:id="@+id/tvNorte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/norte"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/etNorte"
            android:layout_toRightOf="@+id/tvNorte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/norte"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leste"
            android:layout_toLeftOf="@+id/etLeste"/>

        <EditText
            android:id="@+id/etLeste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/leste"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</LinearLayout>

